# ic-python-logging

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml  run_linters.sh  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
example/: dfx.json
example/src/: main.py
ic_python_logging/: __init__.py  _cdk.py  _handler.py
tests/: .gitignore  dfx.json  entrypoint.sh  run_test_ic.sh
tests/src/: .gitignore  main.py
tests/src/tests/: test_functions.py  test_memory_logs.py  test_vars.py
