[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ic_python_logging"
version = "0.3.1"
description = "A lightweight logging library for the Internet Computer (IC)"
readme = "README.md"
authors = [
    { name = "Smart Social Contracts", email = "smartsocialcontracts@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["logging", "debugging", "ic", "internet-computer"]
requires-python = "==3.10.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/smart-social-contracts/ic-python-logging"
Repository = "https://github.com/smart-social-contracts/ic-python-logging.git"
Issues = "https://github.com/smart-social-contracts/ic-python-logging/issues"

[project.scripts]
kslog = "ic_python_logging.cli:main"

[tool.setuptools]
packages = ["ic_python_logging"]
